--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html>
-  Hello World
+  DOMINIQUE MARC WEHRLI <br>
+  Broteggstrasse 46b <br>
+  8500 Frauenfeld <br><br>
+  076 516 16 00
+  <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
 </html>
