--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   DOMINIQUE MARC WEHRLI <br>
-  Jurist <br>
+  Jurist und Architekturfotograf <br>
   Broteggstrasse 46b <br>
   8500 Frauenfeld <br><br>
   076 516 16 00 <br>
