--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!-- WWW.ATELIERWEHRLI.CH - Entwurf und Umsetzung: Atelier Dominique Wehrli - 2016 -->
-<html><head><link rel="shortcut icon" href="/i/i.ico">
+<html><head>
 <meta http-equiv='content-type' content='charset=utf-8'>
-<title>ATELIER WEHRLI</title>
+<title>DOMINIQUE MARC WEHRLI</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
 <body onClick="document.location.href='contact.html'" style="cursor:pointer">
 <div style="display:table;position:absolute;height:100%;width:100%">
-<div style="display:table-cell;vertical-align:middle;font-size:80pt;font-weight:bold;text-align:center;color:#413429"><a href="contact.html"><span style="color:#000">ATELIER WEHRLI</span></a></div>
+<div style="display:table-cell;vertical-align:middle;font-size:12pt;text-align:center;color:#413429">Dominique Marc Wehrli<br>Jurist & Architekturfotograf<br>Broteggstrasse 46b<br>8500 Freuenfeld<br><br>076 516 16 00<br><a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a></div>
 </div>
 </body>
 </html>
