--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>DOMINIQUE MARC WEHRLI</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<body onClick="document.location.href='contact.html'" style="cursor:pointer">
+<body>
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:12pt;text-align:center;color:#413429"><b>Dominique Marc Wehrli</b><br>Jurist & Architekturfotograf<br>Broteggstrasse 46b<br>8500 Freuenfeld<br><br>076 516 16 00<br><a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a></div>
 </div>
