--- a/map.html
+++ b/map.html
@@ -1,1 +1,7 @@
-https://s.geo.admin.ch/unoha5jgibb1
+<!DOCTYPE html>
+<html><head><meta http-equiv='content-type' content='charset=utf-8'>
+<title>MAP</title></head>
+<script>
+document.location = "https://s.geo.admin.ch/unoha5jgibb1"
+</script>
+</html>
