--- a/in.html
+++ b/in.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv='content-type' content='charset=utf-8'>
-<title>MAP</title></head>
+<title>LINKEDIN</title></head>
 <script>
 document.location = "https://www.linkedin.com/in/dominiquemarcwehrli/"
 </script>
