--- a/osm.html
+++ b/osm.html
@@ -1,1 +1,7 @@
-https://osm.org/go/0C1nK84--
+<!DOCTYPE html>
+<html><head><meta http-equiv='content-type' content='charset=utf-8'>
+<title>MAP</title></head>
+<script>
+document.location = "https://osm.org/go/0C1nK84--"
+</script>
+</html>
