--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 <script type="text/javascript" src="s.js"></script></head>
 <body>
 <div style="display:table;position:absolute;height:100%;width:100%">
-<div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429"><b>Dominique Marc Wehrli</b><br>Jurist und Architekturfotograf<br>Broteggstrasse 46b<br>8500 Frauenfeld<br><br>076 516 16 00<br><a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><a href="/in">https://dominiquewehrli.ch/in</a><br><br><a href="/sr">Bundesrecht</a><br><a href="/rb">Rechtsbuch TG</a></div>
+<div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429"><b>Dominique Marc Wehrli</b><br>
+  Jurist und Architekturfotograf<br>Broteggstrasse 46b<br>8500 Frauenfeld<br><br>
+  076 516 16 00<br>
+  <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
+  <a href="/in">https://dominiquewehrli.ch/in</a><br><br>
+  <a href="/sr">Bundesrecht (SR)</a><br>
+  <a href="/rb">Rechtsbuch TG (RB)</a>
+</div>
 </div>
 </body>
 </html>
