--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   076 516 16 00<br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <a href="/in">https://dominiquewehrli.ch/in</a><br><br>
-  <a href="/sr">Bundesrecht (SR)</a><br>
+  <a href="/sr">Bundesrecht (SR)</a>, 
   <a href="/rb">Rechtsbuch TG (RB)</a>
 </div>
 </div>
