--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   076 516 16 00<br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <a href="/in">https://dominiquewehrli.ch/in</a><br><br>
-  <a href="/sr">Bundesrecht</a>, 
-  <a href="/rb">Rechtsbuch TG</a>
+  <a href="/sr">SR</a>, <a href="/rb">RB</a>, <a href="/es">ES</a>, <a href="/bg">BG</a>
 </div>
 </div>
 </body>
