--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   076 516 16 00<br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <a href="/in">https://dominiquewehrli.ch/in</a><br><br>
-  <a href="/sr">SR</a>, <a href="/rb">RB</a>, <a href="/es">ES</a>, <a href="/bg">BG</a>, <a href="/map">MAP</a>, <a href="/osm">OSM</a>
+  <a href="/sr">/sr</a>, <a href="/rb">/rb</a>, <a href="/es">/es</a>, <a href="/bg">/bg</a>, <a href="/map">/map</a>, <a href="/osm">/osm</a>
 </div>
 </div>
 </body>
