--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   Jurist und Architekturfotograf<br>Broteggstrasse 46b<br>8500 Frauenfeld<br><br>
   076 516 16 00<br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
-  <a href="/in">https://dominiquewehrli.ch/in</a><br><br>
-  <a href="/sr">/sr</a> <a href="/rb">/rb</a> <a href="/es">/es</a> <a href="/bg">/bg</a> <a href="/map">/map</a> <a href="/osm">/osm</a>
+  <a href="/">https://dominiquewehrli.ch</a><br><br>
+  <a href="/sr">/sr</a> <a href="/rb">/rb</a> <a href="/es">/es</a> <a href="/bg">/bg</a> <a href="/map">/map</a> <a href="/osm">/osm</a> <a href="/in">/in</a>
 </div>
 </div>
 </body>
