--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   076 516 16 00<br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
-  <a href="/sr">/sr</a> <a href="/rb">/rb</a> <a href="/es">/es</a> <a href="/bg">/bg</a> <a href="/map">/map</a> <a href="/osm">/osm</a> <a href="/in">/in</a>
+  <a href="/sr" target="_blank">/sr</a> <a href="/rb" target="_blank">/rb</a> <a href="/es" target="_blank">/es</a> 
+  <a href="/bg" target="_blank">/bg</a> <a href="/map" target="_blank">/map</a> <a href="/osm" target="_blank">/osm</a> 
+  <a href="/in" target="_blank">/in</a>
 </div>
 </div>
 </body>
