--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429"><b>Dominique Marc Wehrli</b><br>
   Jurist und Architekturfotograf<br>Broteggstrasse 46b<br>8500 Frauenfeld<br><br>
-  <a href="tel:+41765161600">076 516 16 00</a><br>
+  <a href="tel:+41765161600">+41 (0)76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
   <a href="/sr" target="_blank">/sr</a> <a href="/rb" target="_blank">/rb</a> <a href="/es" target="_blank">/es</a> 
