--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="tel:+41765161600">+41 (0) 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
-  <a href="/sr" target="_blank" alt="1">/sr</a> <a href="/rb" target="_blank">/rb</a> <a href="/es" target="_blank">/es</a> 
+  <a href="/sr" target="_blank" title="1">/sr</a> <a href="/rb" target="_blank">/rb</a> <a href="/es" target="_blank">/es</a> 
   <a href="/bg" target="_blank">/bg</a> <a href="/map" target="_blank">/map</a> <a href="/osm" target="_blank">/osm</a> 
   <a href="/in" target="_blank">/in</a>
 </div>
