--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <a href="tel:+41765161600">+41 (0) 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
-  <a href="/sr" target="_blank" title="1">/sr</a> <a href="/rb" target="_blank" title="2">/rb</a> <a href="/es" target="_blank" title="3">/es</a> 
-  <a href="/bg" target="_blank" title="4">/bg</a> <a href="/map" target="_blank" title="5">/map</a> <a href="/osm" target="_blank" title="6">/osm</a> 
-  <a href="/in" target="_blank" title="7">/in</a>
+  <a href="/sr" target="_blank" title="s">/sr</a> <a href="/rb" target="_blank" title="r">/rb</a> <a href="/es" target="_blank" title="e">/es</a> 
+  <a href="/bg" target="_blank" title="b">/bg</a> <a href="/map" target="_blank" title="m">/map</a> <a href="/osm" target="_blank" title="o">/osm</a> 
+  <a href="/in" target="_blank" title="i">/in</a>
 </div>
 </div>
 </body>
