--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
   <a href="/sr" target="_blank" title="s">/sr</a> <a href="/rb" target="_blank" title="r">/rb</a> <a href="/es" target="_blank" title="e">/es</a> 
   <a href="/bg" target="_blank" title="b">/bg</a> <a href="/map" target="_blank" title="m">/map</a> <a href="/osm" target="_blank" title="o">/osm</a> 
-  <a href="/in" target="_blank" title="i">/in</a>
+  <a href="/in" target="_blank" title="i">/in</a><br><br>
+  <a href="/kollektion" target="_blank" title="i">/kollektion</a><br><br>
 </div>
 </div>
 </body>
