--- a/osm.html
+++ b/osm.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv='content-type' content='charset=utf-8'>
-<title>MAP</title></head>
-<script>
-document.location = "https://osm.org/go/0C1nK84--"
-</script>
+<html><head>
+<meta http-equiv='content-type' content='charset=utf-8'>
+<title>OSM</title>
+<link rel='stylesheet' href='s.css' type='text/css'>
+<script type="text/javascript" src="s.js"></script></head>
+<script>o()</script>
 </html>
