--- a/map.html
+++ b/map.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv='content-type' content='charset=utf-8'>
-<title>MAP</title></head>
-<script>
-document.location = "https://s.geo.admin.ch/unoha5jgibb1"
-</script>
+<html><head>
+<meta http-equiv='content-type' content='charset=utf-8'>
+<title>MAP</title>
+<link rel='stylesheet' href='s.css' type='text/css'>
+<script type="text/javascript" src="s.js"></script></head>
+<script>m()</script>
 </html>
