--- a/in.html
+++ b/in.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html><head><meta http-equiv='content-type' content='charset=utf-8'>
-<title>LINKEDIN</title></head>
-<script>
-document.location = "https://www.linkedin.com/in/dominiquemarcwehrli/"
-</script>
+<html><head>
+<meta http-equiv='content-type' content='charset=utf-8'>
+<title>IN</title>
+<link rel='stylesheet' href='s.css' type='text/css'>
+<script type="text/javascript" src="s.js"></script></head>
+<script>i()</script>
 </html>
