--- a/bg.html
+++ b/bg.html
@@ -1,10 +1,8 @@
-
 <!DOCTYPE html>
-<html><head><meta http-equiv='content-type' content='charset=utf-8'>
-<title>BG</title></head>
-<script>
-// EINGABE
-var q = prompt('Urteil des BGer (z.B. 1C_483/2021).').replace(" ", "_").replace(" ", "/")
-window.location.href = "https://www.bger.ch/ext/eurospider/live/de/php/aza/http/index.php?lang=de&type=simple_query&query_words=" + q;
-</script>
+<html><head>
+<meta http-equiv='content-type' content='charset=utf-8'>
+<title>BG</title>
+<link rel='stylesheet' href='s.css' type='text/css'>
+<script type="text/javascript" src="s.js"></script></head>
+<script>b()</script>
 </html>
