--- a/kollektion.html
+++ b/kollektion.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head><link rel="shortcut icon" href="/i/i.ico"><meta http-equiv='content-type' content='charset=utf-8'>
-	<title id="t1">COLLECTION 2004-2016</title>
+	<title id="t1">KOLLECTION 2004-2016</title>
 	<link rel='stylesheet' href='s.css' type='text/css'><script type="text/javascript" src="s.js"></script></head>
 <body style="cursor:pointer">
 <div style="margin-top:auto;margin-bottom:auto;position:absolute;top:0;left:0;bottom:0;right:0;font-size:20pt;width:30px;height:30px">&nbsp;<</div>
