--- a/kollektion.html
+++ b/kollektion.html
@@ -9,7 +9,7 @@
 <div style="display:table;position:absolute;height:100%;width:100%;" onClick="p(1)">
 	<div style="display:table-cell;vertical-align:middle;font-size:10pt">
 		<div style="text-align:center"><!--<img id='i1' src='i/t.jpg'>-->demnächst &hellip;</div>
-		<div id="t2" style="text-align:center;color:#fff;margin-top:10px">&nbsp;</div>
+		<div id="t2" style="text-align:center;color:#fff;margin-top:10px;font-size:14pt">&nbsp;</div>
 		<script>p(0)</script>
 	</div>
 </div>
