--- a/kollektion.html
+++ b/kollektion.html
@@ -7,9 +7,9 @@
 <div style="margin-top:auto;margin-bottom:auto;position:absolute;top:0;left:0;bottom:0;right:0;font-size:20pt;width:30px;height:30px">&nbsp;<</div>
 <div style="margin-top:auto;margin-bottom:auto;position:absolute;top:0;left:0;bottom:0;right:0;font-size:20pt;width:100%;height:30px;text-align:right">>&nbsp;</div>
 <div style="display:table;position:absolute;height:100%;width:100%;" onClick="p(1)">
-	<div style="display:table-cell;vertical-align:middle;font-size:10pt">
+	<div style="display:table-cell;vertical-align:middle;font-size:14pt">
 		<div style="text-align:center"><!--<img id='i1' src='i/t.jpg'>-->demnächst &hellip;</div>
-		<div id="t2" style="text-align:center;color:#fff;margin-top:10px;font-size:14pt">&nbsp;</div>
+		<div id="t2" style="text-align:center;color:#fff;margin-top:10px">&nbsp;</div>
 		<script>p(0)</script>
 	</div>
 </div>
