--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429"><b>Dominique Marc Wehrli</b><br>
-  Jurist und Architekturfotograf<br>Broteggstrasse 46b<br><a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank">8500 Frauenfeld</a><br><br>
+  Jurist und Architekturfotograf<br>Broteggstrasse 46<br><a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank">8500 Frauenfeld</a><br><br>
   <a href="tel:+41765161600">+41 (0) 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
