--- a/sr.html
+++ b/sr.html
@@ -4,5 +4,5 @@
 <title>SR</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<script>s()</script>
+<script>sr()</script>
 </html>
