--- a/osm.html
+++ b/osm.html
@@ -4,5 +4,5 @@
 <title>OSM</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<script>o()</script>
+<script>osm()</script>
 </html>
