--- a/es.html
+++ b/es.html
@@ -4,5 +4,5 @@
 <title>ES</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<script>e()</script>
+<script>es()</script>
 </html>
