--- a/bg.html
+++ b/bg.html
@@ -4,5 +4,5 @@
 <title>BG</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<script>b()</script>
+<script>bg()</script>
 </html>
