--- a/map.html
+++ b/map.html
@@ -4,5 +4,5 @@
 <title>MAP</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<script>m()</script>
+<script>map()</script>
 </html>
