--- a/in.html
+++ b/in.html
@@ -4,5 +4,5 @@
 <title>IN</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
-<script>i()</script>
+<script>in()</script>
 </html>
