--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429">DOMINIQUE MARC WEHRLI<br>
   Jurist und Architekturfotograf<br>Broteggstrasse 46<br><a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank">8500 Frauenfeld</a><br><br>
-  <a href="tel:+41765161600">+41 (0) 76 516 16 00</a><br>
+  <a href="tel:+41765161600">+41 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
   <a href="/sr" target="_blank" title="s">/sr</a> <a href="/rb" target="_blank" title="r">/rb</a> <a href="/es" target="_blank" title="e">/es</a> 
