--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
   <a href="/sr" target="_blank" title="s">/sr</a> <a href="/rb" target="_blank" title="r">/rb</a> 
-  <a href="/bg" target="_blank" title="b">/bg</a> <a href="/es" target="_blank" title="e">/es</a> 
+  <a href="/bg" target="_blank" title="b">/bg</a> <a href="/es" target="_blank" title="e">/es</a><br>
   <a href="/kollektion" target="_blank" title="k">/kollektion</a><br><br>
 </div>
 </div>
