--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429">DOMINIQUE MARC WEHRLI<br>
   <a href="/in">Amtsjurist und Architekt</a><br><a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank">Broteggstrasse 46<br>8500 Frauenfeld</a><br><br>
   <a href="tel:+41765161600">+41 76 516 16 00</a><br>
-  <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><br>
+  <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
   <a href="/sr" target="_blank" title="s">/sr</a> <a href="/rb" target="_blank" title="r">/rb</a> 
   <a href="/bg" target="_blank" title="b">/bg</a> <a href="/es" target="_blank" title="e">/es</a> 
-  <a href="https://www.swisstransfer.com/" target="_blank">/st</a> 
+  <a href="https://www.swisstransfer.com/" target="_blank">/st</a><br><br>
   <a href="/kollektion" target="_blank" title="k">/kollektion</a><br><br>
 </div>
 </div>
