--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="tel:+41765161600">+41 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
-  <a href="/sr" target="_blank" title="s">/sr</a> <a href="/rb" target="_blank" title="r">/rb</a> 
+  <a href="/SR" target="_blank" title="s">/sr</a> <a href="/RB" target="_blank" title="r">/rb</a> 
   <a href="/bg" target="_blank" title="b">/bg</a> <a href="/es" target="_blank" title="e">/es</a> 
   <a href="https://www.swisstransfer.com/" target="_blank" title="t">/st</a> 
   <a href="/kollektion" target="_blank" title="k">/kollektion</a><br><br>
