--- a/SR.html
+++ b/SR.html
@@ -5,4 +5,5 @@
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="s.js"></script></head>
 <script>sr()</script>
+  <body>Dominique M. Wehrli, 2024<<br><a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a></body>
 </html>
