--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <meta http-equiv='content-type' content='charset=utf-8'>
 <title>DOMINIQUE MARC WEHRLI</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
-<script type="text/javascript" src="s.js"></script></head>
+<script type="text/javascript" src="s.js"></script>
+<script type="text/javascript" src="k.js"></script></head>
 <body>
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429">DOMINIQUE MARC WEHRLI<br>
