--- a/BG.html
+++ b/BG.html
@@ -3,6 +3,7 @@
 <meta http-equiv='content-type' content='charset=utf-8'>
 <title>BG</title>
 <link rel='stylesheet' href='s.css' type='text/css'>
-<script type="text/javascript" src="s.js"></script></head>
+<script type="text/javascript" src="Suche.js"></script>
+<script type="text/javascript" src="Keys.js"></script></head>
 <script>bg()</script>
 </html>
