--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="/SR" target="_blank" title="s">/sr</a> <a href="/RB" target="_blank" title="r">/rb</a> 
   <a href="/BG" target="_blank" title="b">/bg</a> <a href="/ES" target="_blank" title="e">/es</a> 
   <a href="https://www.swisstransfer.com/" target="_blank" title="t">/st</a> 
-  <a href="/kollektion" target="_blank" title="k">/kollektion</a><br><br>
+  <!-- <a href="/kollektion" target="_blank" title="k">/kollektion</a><br> --><br>
 </div>
 </div>
 </body>
