--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429">DOMINIQUE MARC WEHRLI<br>
-  <a href="/in">Architekt, MLaw</a><br><a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank">Broteggstrasse 46<br>8500 Frauenfeld</a><br><br>
+  <a href="/in">Jurist und Architekt</a><br><a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank">Broteggstrasse 46<br>8500 Frauenfeld</a><br><br>
   <a href="tel:+41765161600">+41 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
