--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
   <a href="/SR" target="_blank" title="s">/sr</a> <a href="/RB" target="_blank" title="r">/rb</a> <a href="/ES" target="_blank" title="e">/es</a> <a href="/BG" target="_blank" title="b">/bg</a> 
-  <a href="https://www.swisstransfer.com/" target="_blank" title="t">/st</a> <a href="/kollektion" target="_blank" title="k">/k</a> 
+  <a href="https://www.swisstransfer.com/" target="_blank" title="t">/st</a> <a href="/kollektion" target="_blank" title="k">/kollektion</a> 
   <!-- <a href="/kollektion" target="_blank" title="k">/kollektion</a><br> --><br><br>
 </div>
 </div>
