--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <a href="tel:+41765161600">+41 76 516 16 00</a><br>
   <a href="mailto:mail@dominiquewehrli.ch">mail@dominiquewehrli.ch</a><br><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
-  <a href="/SR" target="_blank" title="s">/sr</a> <a href="/RB" target="_blank" title="r">/rb</a> <a href="/ES" target="_blank" title="e">/es</a> <a href="/BG" target="_blank" title="b">/bg</a> 
-  <a href="/kollektion" target="_blank" title="k">/kollektion</a> 
+  <a href="/SR" target="_blank" title="s">/SR</a> <a href="/RB" target="_blank" title="r">/RB</a> <a href="/ES" target="_blank" title="e">/ES</a> <a href="/BG" target="_blank" title="b">/BG</a> 
+  <a href="/Kollektion" target="_blank" title="k">/Kollektion</a> 
   <!-- <a href="/kollektion" target="_blank" title="k">/kollektion</a><br> --><br><br>
 </div>
 </div>
