--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="/RB" target="_blank" title="Rechtsbuch TG [r]">/RB</a> 
   <a href="/ES" target="_blank" title="Entscheidsuche [e]">/ES</a> 
   <a href="/BG" target="_blank" title="Bundesgerichtsentscheide [b]">/BG</a> 
-  <a href="/Kollektion" target="_blank" title="Kollektion 2004–2024 [k]">/Kollektion</a>
+  <a href="/Sammlung" target="_blank" title="Sammlung 2004–2024">/Sammlung</a>
 </div>
 </div>
 </body>
