--- a/Sammlung.html
+++ b/Sammlung.html
@@ -1,8 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head><link rel="shortcut icon" href="/i/i.ico"><meta http-equiv='content-type' content='charset=utf-8'>
-	<title id="t1">KOLLEKTION 2004–2024</title>
-	<link rel='stylesheet' href='s.css' type='text/css'><script type="text/javascript" src="Kollektion.js"></script></head>
+	<title id="t1">SAMMLUNG 2004–2024</title>
+	<link rel='stylesheet' href='s.css' type='text/css'><script type="text/javascript" src="Sammlung.js"></script></head>
 <body style="cursor:pointer">
 <div style="margin-top:auto;margin-bottom:auto;position:absolute;top:0;left:0;bottom:0;right:0;font-size:20pt;width:30px;height:30px">&nbsp;<</div>
 <div style="margin-top:auto;margin-bottom:auto;position:absolute;top:0;left:0;bottom:0;right:0;font-size:20pt;width:100%;height:30px;text-align:right">>&nbsp;</div>
