--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="/SR" target="_blank" title="Bundesrecht [s]">/SR</a> 
   <a href="/RB" target="_blank" title="Rechtsbuch TG [r]">/RB</a> 
   <a href="/ES" target="_blank" title="Entscheidsuche [e]">/ES</a> 
-  <a href="/BG" target="_blank" title="Bundesgerichtsentscheide [b]">/BG</a> 
+  <a href="/BG" target="_blank" title="Bundesgerichtsentscheide [b]">/BG</a> <br>
   <a href="/Sammlung" title="Sammlung 2004–2024">/Sammlung</a>
 </div>
 </div>
