--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <a href="tel:+41765161600" title="Telefon">+41 (0)76 516 16 00</a><br>
   <a href="mailto:kontakt@dominiquewehrli.ch" title="E-Mail">kontakt@dominiquewehrli.ch</a><br><br>
   <!--<a href="/">https://dominiquewehrli.ch</a><br><br>-->
-  <a href="/SR" target="_blank" title="Bundesrecht [s]">/SR</a> 
-  <a href="/RB" target="_blank" title="Rechtsbuch TG [r]">/RB</a> 
-  <a href="/ES" target="_blank" title="Entscheidsuche [e]">/ES</a> 
-  <a href="/BG" target="_blank" title="Bundesgerichtsentscheide [b]">/BG</a> <br>
+  <a href="/SR" target="_blank" title="Bundesrecht (s)">/SR</a> 
+  <a href="/RB" target="_blank" title="Rechtsbuch TG (r)">/RB</a> 
+  <a href="/ES" target="_blank" title="Entscheidsuche (e)">/ES</a> 
+  <a href="/BG" target="_blank" title="Bundesgerichtsentscheide (b)">/BG</a> <br>
   <a href="/Sammlung" title="Sammlung 2004–2024">/Sammlung</a>
 </div>
 </div>
