--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div style="display:table;position:absolute;height:100%;width:100%">
 <div style="display:table-cell;vertical-align:middle;font-size:14pt;text-align:center;color:#413429">DOMINIQUE MARC WEHRLI<br>
-  <a href="/in" title="LinkedIn">Jurist, Architekt und Fotograf</a><br>
+  <a href="/in" title="LinkedIn">Jurist</a> und <a href="https://foto-ch.ch/persons/detail/30630">Fotograf</a><br>
   <a href="https://www.openstreetmap.org/#map=15/47.55025/8.90755" target="_blank" title="Karte">Broteggstrasse 46<br>8500 Frauenfeld</a><br><br>
   <a href="tel:+41765161600" title="Telefon">+41 (0)76 516 16 00</a><br>
   <a href="mailto:kontakt@dominiquewehrli.ch" title="E-Mail">kontakt@dominiquewehrli.ch</a><br><br>
