--- a/RB.html
+++ b/RB.html
@@ -5,5 +5,6 @@
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="Suche.js"></script>
 <script type="text/javascript" src="Keys.js"></script></head>
-<script>rb()</script>
+  <body onLoad="JavaScript:rb()"></body>
 </html>
+
