--- a/RB.html
+++ b/RB.html
@@ -5,6 +5,7 @@
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="Suche.js"></script>
 <script type="text/javascript" src="Keys.js"></script></head>
-  <body onLoad="JavaScript:rb()"></body>
+  <body onLoad="rb()"></body>
 </html>
+
 
