--- a/SR.html
+++ b/SR.html
@@ -5,5 +5,6 @@
 <link rel='stylesheet' href='s.css' type='text/css'>
 <script type="text/javascript" src="Suche.js"></script>
 <script type="text/javascript" src="Keys.js"></script></head>
-<script>sr()</script>
+<body onLoad="sr()"></body>
 </html>
+
